_BACKUP/z_HTML-VERSIONS/version3/bgoonz42.gitbook.io/datastructures-in-pytho/installations-setup-and-env/untitled.md
<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--small-5fbe8ad7" />

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="link-a079aa82--primary-53a25e66--logoLink-10d08504"></a>

<img src="https://gblobscdn.gitbook.com/spaces%2F-Mij72ebV4OjqJvBacMy%2Favatar-rectangle-1631155247747.png?alt=media" class="image-67b14f24--logo-35ac2404--medium-5fbe8af6" />

<a href="https://bgoonz-blog.netlify.app/#gsc.tab=0" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">My Blog</span></span></a>

<a href="https://www.notion.so/webdevhub42/Python-Data-Structures-Unit-1da9a5d55db844f4b62aff6fd2b4d1ce" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Notion Notes</span></span></a>

<a href="https://bgoonz-branch-the-algos.vercel.app/" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">The Algorithms</span></span></a>

<a href="https://thealgorithms.netlify.app/#" class="button-36063075--medium-6e2a217a--button-f76f0854--linkButton-67c61496--links-282dde1f"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1--text-8ee2c8b2"><span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Python Module Website</span></span></a>

<a href="https://bgoonz42.gitbook.io/datastructures-in-pytho/" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Home</span></a>

<a href="../index.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Index</span></a>

<a href="../readme-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">README</span></a>

<a href="../navigation.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Navigation</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Cirriculumn</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk17</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk18</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk19</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">wk20</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Utilities</span></span>

<a href="../utilities/code-lab-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Code lab Notebooks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Repl.IT</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Utilites</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">practice</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">GCA Sprint Prep:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Supplemental Practice:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Abstract Data Structures:</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Resources</span></span>

<a href="../resources/untitled-2.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Inheritance</span></a>

<a href="../resources/strings.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Strings</span></a>

<a href="../resources/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<a href="../resources/python-vs-javascript.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python VS JavaScript</span></a>

<a href="../resources/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Misc. Resources</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Things To Internalize:</span>

<a href="../resources/intro-to-python-w-jupyter-notebooks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Intro To Python w Jupyter Notebooks</span></a>

<a href="../resources/calculating-big-o.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Calculating Big O</span></a>

<a href="../resources/python-cheat-sheet.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Cheat Sheet</span></a>

<a href="../resources/youtube.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Youtube</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Links</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">quick-reference</span></span>

<a href="../quick-reference/python-snippets.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Snippets</span></a>

<a href="../quick-reference/python3-regex.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python3 Regex</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Module Index:</span>

<a href="../quick-reference/creating-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Creating Python Modules</span></a>

<a href="../quick-reference/untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Useful Info</span></a>

<a href="../quick-reference/python-glossary.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Glossary</span></a>

<a href="../quick-reference/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">index</span></a>

<a href="../quick-reference/bash-commands.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">List Of Python Cheat Sheets</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Docs</span></span>

<a href="../stdlib/basic-syntax.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Basic Syntax</span></a>

<a href="../stdlib/classes-and-objects.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes and objects</span></a>

<a href="../stdlib/conditionals-and-loops.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Conditionals and loops</span></a>

<a href="../stdlib/dictionaries-sets-files-and-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries, sets, files, and modules</span></a>

<a href="../stdlib/untitled-1.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Functions</span></a>

<a href="../stdlib/values-expressions-and-statments.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Values Expressions &amp; Statments</span></a>

<a href="../stdlib/python-standard-library-stdlib.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Python Standard Library (STDLIB)</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Docs</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built In Functions</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Lists</span>

<a href="../stdlib/dictionaries.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Dictionaries</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Classes</span>

<a href="../stdlib/queue-and-stacks.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Queue &amp; Stacks</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">MISC</span></span>

<a href="../misc/built-in-methods-and-functions.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Built-in Methods &amp; Functions</span></a>

<a href="../misc/unsorted-examples.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Unsorted Examples</span></a>

<a href="../misc/outline.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Outline</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">About Python</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Interview Prep</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Interview Resources</span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Installations Setup & Env</span></span>

<a href="untitled.html" class="navButton-94f2579c--navButtonClickable-161b88ca--navButtonOpened-6a88552e"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">python-setup</span></a>

<a href="installing-python-modules.html" class="navButton-94f2579c--navButtonClickable-161b88ca"><span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Installing Python Modules</span></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f"><span class="text-4505230f--InfoH200-3a8a7a86--textContentFamily-49a318e1">Aux-Exploration</span></span>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1--navButtonLabel-14a4968f">Subject</span>

<a href="https://www.gitbook.com/?utm_source=content&amp;utm_medium=trademark&amp;utm_campaign=bgoonz42" class="reset-3c756112--trademark-a8da4b94"></a>

<span class="text-4505230f--TextH200-a3425406--textUIFamily-5ebd8e40">Powered by **GitBook**</span>

<span class="text-4505230f--DisplayH900-bfb998fa--textContentFamily-49a318e1">python-setup</span>
=================================================================================================

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40--text-8ee2c8b2"></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="4e38bb4e55c3499c82b0c657580a6226"><span data-offset-key="4e38bb4e55c3499c82b0c657580a6226:0">Installing Python Modules</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="94b0fb5ba6f34826a13acebc0ccde692"><span data-offset-key="94b0fb5ba6f34826a13acebc0ccde692:0">Email</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="704c2d1678824d6b9f43b3b601691574"><span data-offset-key="704c2d1678824d6b9f43b3b601691574:0"><span data-slate-zero-width="z">​</span></span></span><a href="../../cdn-cgi/l/email-protection.html#2c48455f58595845405f015f454b09181c5c555844434202435e4b" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="5265fca8582f42078b993269c0f27fde"><span data-offset-key="5265fca8582f42078b993269c0f27fde:0"><span class="__cf_email__" data-cfemail="f6929f858283829f9a85db859f91b6868f829e9998d8998491">[email protected]</span></span></span></a><span data-key="ca6a04696e1e4e028e3cbe682ede3586"><span data-offset-key="ca6a04696e1e4e028e3cbe682ede3586:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cdb3536fda59467c9e46964b4a61c40f"><span data-offset-key="cdb3536fda59467c9e46964b4a61c40f:0">As a popular open source development project, Python has an active supporting community of contributors and users that also make their software available for other Python developers to use under open source license terms.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="597a00be5fa447198bdafc737aa99cc1"><span data-offset-key="597a00be5fa447198bdafc737aa99cc1:0">This allows Python users to share and collaborate effectively, benefiting from the solutions others have already created to common (and sometimes even rare!) problems, as well as potentially contributing their own solutions to the common pool.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e370a2ffce1b4ed88cb5607ac7a81edc"><span data-offset-key="e370a2ffce1b4ed88cb5607ac7a81edc:0">This guide covers the installation part of the process. For a guide to creating and sharing your own Python projects, refer to the </span></span><a href="https://docs.python.org/3/distributing/index.html#distributing-index" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="77e4762737924dd19f8adf8bfaeb65c0"><span data-offset-key="77e4762737924dd19f8adf8bfaeb65c0:0">distribution guide</span></span></a><span data-key="49c72f4f4a09499196f0ddb7cfaf4a85"><span data-offset-key="49c72f4f4a09499196f0ddb7cfaf4a85:0">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="058c80f448374e21a3b2367dd387e33a"><span data-offset-key="058c80f448374e21a3b2367dd387e33a:0">Note </span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1d77fcfafaa94d94b3ad25aeb117c560"><span data-offset-key="1d77fcfafaa94d94b3ad25aeb117c560:0">For corporate and other institutional users, be aware that many organisations have their own policies around using and contributing to open source software. Please take such policies into account when making use of the distribution and installation tools provided with Python.</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="65eccccbfa064862a14c804abf30b678"><span data-offset-key="65eccccbfa064862a14c804abf30b678:0">Key terms</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d0d4442d884c43149911959bdb954bca"><span data-offset-key="d0d4442d884c43149911959bdb954bca:0">`pip`</span><span data-offset-key="d0d4442d884c43149911959bdb954bca:1"> is the preferred installer program. Starting with Python 3.4, it is included by default with the Python binary installers.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4f765ac9ca124ab8bd7824c07501bb16"><span data-offset-key="4f765ac9ca124ab8bd7824c07501bb16:0">A </span><span data-offset-key="4f765ac9ca124ab8bd7824c07501bb16:1">*virtual environment*</span><span data-offset-key="4f765ac9ca124ab8bd7824c07501bb16:2"> is a semi-isolated Python environment that allows packages to be installed for use by a particular application, rather than being installed system wide.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="273d67add3eb4fe291a1c23e93f4b7d4"><span data-offset-key="273d67add3eb4fe291a1c23e93f4b7d4:0">`venv`</span><span data-offset-key="273d67add3eb4fe291a1c23e93f4b7d4:1"> is the standard tool for creating virtual environments, and has been part of Python since Python 3.3. Starting with Python 3.4, it defaults to installing </span><span data-offset-key="273d67add3eb4fe291a1c23e93f4b7d4:2">`pip`</span><span data-offset-key="273d67add3eb4fe291a1c23e93f4b7d4:3"> into all created virtual environments.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e"><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:0">`virtualenv`</span><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:1"> is a third party alternative (and predecessor) to </span><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:2">`venv`</span><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:3">. It allows virtual environments to be used on versions of Python prior to 3.4, which either don’t provide </span><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:4">`venv`</span><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:5"> at all, or aren’t able to automatically install </span><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:6">`pip`</span><span data-offset-key="b5a2400fc8fc4c9bbae0fcf4ca83d86e:7"> into created environments.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="bf587da9efb9463f99c61666c725fadb"><span data-offset-key="bf587da9efb9463f99c61666c725fadb:0">The </span></span><a href="https://pypi.org/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="ebb233ac845143e39107e5f6fe6a9d73"><span data-offset-key="ebb233ac845143e39107e5f6fe6a9d73:0">Python Packaging Index</span></span></a><span data-key="3799573a16f54187b5c8d2417c551743"><span data-offset-key="3799573a16f54187b5c8d2417c551743:0"> is a public repository of open source licensed packages made available for use by other Python users.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="16321191ced24f0cada91114511a45c0"><span data-offset-key="16321191ced24f0cada91114511a45c0:0">the </span></span><a href="https://www.pypa.io/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="4814a6897cce4fbdacd3a7150f17b239"><span data-offset-key="4814a6897cce4fbdacd3a7150f17b239:0">Python Packaging Authority</span></span></a><span data-key="9b15ad3697d644c4a716b4b8bf8fd2a8"><span data-offset-key="9b15ad3697d644c4a716b4b8bf8fd2a8:0"> is the group of developers and documentation authors responsible for the maintenance and evolution of the standard packaging tools and the associated metadata and file format standards. They maintain a variety of tools, documentation, and issue trackers on both </span></span><a href="https://github.com/pypa" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="a69962b59a6c43a2b2613fda2b1815ce"><span data-offset-key="a69962b59a6c43a2b2613fda2b1815ce:0">GitHub</span></span></a><span data-key="d6f28052061543629003c67d5021f9fd"><span data-offset-key="d6f28052061543629003c67d5021f9fd:0"> and </span></span><a href="https://bitbucket.org/pypa/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="c892bc0ac77e41cbaa0368cc26cce517"><span data-offset-key="c892bc0ac77e41cbaa0368cc26cce517:0">Bitbucket</span></span></a><span data-key="da061649a2ea4590bb79fe7ee9ef3688"><span data-offset-key="da061649a2ea4590bb79fe7ee9ef3688:0">.</span></span></span>

-   <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d9fe1eca601348278c5d6ac98d9c3b0f"><span data-offset-key="d9fe1eca601348278c5d6ac98d9c3b0f:0">`distutils`</span><span data-offset-key="d9fe1eca601348278c5d6ac98d9c3b0f:1"> is the original build and distribution system first added to the Python standard library in 1998. While direct use of </span><span data-offset-key="d9fe1eca601348278c5d6ac98d9c3b0f:2">`distutils`</span><span data-offset-key="d9fe1eca601348278c5d6ac98d9c3b0f:3"> is being phased out, it still laid the foundation for the current packaging and distribution infrastructure, and it not only remains part of the standard library, but its name lives on in other ways (such as the name of the mailing list used to coordinate Python packaging standards development).</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8817bb4cad2d4b0898c5dcbee00db9b7"><span data-offset-key="8817bb4cad2d4b0898c5dcbee00db9b7:0">Changed in version 3.5: The use of </span><span data-offset-key="8817bb4cad2d4b0898c5dcbee00db9b7:1">`venv`</span><span data-offset-key="8817bb4cad2d4b0898c5dcbee00db9b7:2"> is now recommended for creating virtual environments.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="916410e63e954f93ae57ecc3301e1011"><span data-offset-key="916410e63e954f93ae57ecc3301e1011:0">See also </span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="3016948729ce4c5da3437c5196067a7d"><span data-offset-key="3016948729ce4c5da3437c5196067a7d:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://packaging.python.org/installing/#creating-virtual-environments" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="8d58cf4adaf34a369e751e9780ea504b"><span data-offset-key="8d58cf4adaf34a369e751e9780ea504b:0">Python Packaging User Guide: Creating and using virtual environments</span></span></a><span data-key="5032f6d0d48e4776a0bd9a3e26ca2252"><span data-offset-key="5032f6d0d48e4776a0bd9a3e26ca2252:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="a47b4b959537473a9abedf20e85d5c1d"><span data-offset-key="a47b4b959537473a9abedf20e85d5c1d:0">Basic usage</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8db6fa60a1f84bfa9cb7aa8c846be87f"><span data-offset-key="8db6fa60a1f84bfa9cb7aa8c846be87f:0">The standard packaging tools are all designed to be used from the command line.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a4efac43f6d1474eb7e4518598f5d317"><span data-offset-key="a4efac43f6d1474eb7e4518598f5d317:0">The following command will install the latest version of a module and its dependencies from the Python Packaging Index:</span></span></span>

    python -m pip install SomePackage

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d59b6adbc2784e08a9049f857cbb9d94"><span data-offset-key="d59b6adbc2784e08a9049f857cbb9d94:0">Note </span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6fe74523c2294aa2a99de55094f46859"><span data-offset-key="6fe74523c2294aa2a99de55094f46859:0">For POSIX users (including Mac OS X and Linux users), the examples in this guide assume the use of a </span></span><a href="https://docs.python.org/3/glossary.html#term-virtual-environment" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="5ff4ccd1f4294391a39a5c06301db5b3"><span data-offset-key="5ff4ccd1f4294391a39a5c06301db5b3:0">virtual environment</span></span></a><span data-key="81701532acb94f97b117d43274b36f1e"><span data-offset-key="81701532acb94f97b117d43274b36f1e:0">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b707baa4397e44cbb0cca0be3de93991"><span data-offset-key="b707baa4397e44cbb0cca0be3de93991:0">For Windows users, the examples in this guide assume that the option to adjust the system PATH environment variable was selected when installing Python.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="caed344a8dcc4461940293867452f7e9"><span data-offset-key="caed344a8dcc4461940293867452f7e9:0">It’s also possible to specify an exact or minimum version directly on the command line. When using comparator operators such as </span><span data-offset-key="caed344a8dcc4461940293867452f7e9:1">`>`</span><span data-offset-key="caed344a8dcc4461940293867452f7e9:2">, </span><span data-offset-key="caed344a8dcc4461940293867452f7e9:3">`<`</span><span data-offset-key="caed344a8dcc4461940293867452f7e9:4"> or some other special character which get interpreted by shell, the package name and the version should be enclosed within double quotes:</span></span></span>

    python -m pip install SomePackage==1.0.4    # specific versionpython -m pip install "SomePackage>=1.0.4"  # minimum version

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d285470bc74c4e73824f41c1b80c6b39"><span data-offset-key="d285470bc74c4e73824f41c1b80c6b39:0">Normally, if a suitable module is already installed, attempting to install it again will have no effect. Upgrading existing modules must be requested explicitly:</span></span></span>

    python -m pip install --upgrade SomePackage

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b8b2a2e30d104d41b9c083582d83fc26"><span data-offset-key="b8b2a2e30d104d41b9c083582d83fc26:0">More information and resources regarding </span><span data-offset-key="b8b2a2e30d104d41b9c083582d83fc26:1">`pip`</span><span data-offset-key="b8b2a2e30d104d41b9c083582d83fc26:2"> and its capabilities can be found in the </span></span><a href="https://packaging.python.org/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="ebabb7df0c1847f293bea0e22334a243"><span data-offset-key="ebabb7df0c1847f293bea0e22334a243:0">Python Packaging User Guide</span></span></a><span data-key="291c82da40b946a29e829819c268bd90"><span data-offset-key="291c82da40b946a29e829819c268bd90:0">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7ac1af98be95474d97cb08873aec9384"><span data-offset-key="7ac1af98be95474d97cb08873aec9384:0">Creation of virtual environments is done through the </span></span><a href="https://docs.python.org/3/library/venv.html#module-venv" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="58ffd91efe094f9580590af4f1e3eb81"><span data-offset-key="58ffd91efe094f9580590af4f1e3eb81:0"><code class="code-0458e21e" spellcheck="false" data-slate-leaf="true">venv</code></span></span></a><span data-key="bfc5d9d7a10a4690b9e356d13fc9beb9"><span data-offset-key="bfc5d9d7a10a4690b9e356d13fc9beb9:0"> module. Installing packages into an active virtual environment uses the commands shown above.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1b35720898d24d888ffec7ccfb25931a"><span data-offset-key="1b35720898d24d888ffec7ccfb25931a:0">See also </span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1f45fa05f75b4553b15c175507347cf0"><span data-offset-key="1f45fa05f75b4553b15c175507347cf0:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://packaging.python.org/installing/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="0b57df37e73d45fcb5edfbfbffb52da2"><span data-offset-key="0b57df37e73d45fcb5edfbfbffb52da2:0">Python Packaging User Guide: Installing Python Distribution Packages</span></span></a><span data-key="35b88f8d23b14596931bc2440ca8e6f9"><span data-offset-key="35b88f8d23b14596931bc2440ca8e6f9:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="d9c69707c29f4cf5b5c985582bd12b53"><span data-offset-key="d9c69707c29f4cf5b5c985582bd12b53:0">How do I …?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="b5feda558af9464aa2bacae6d6b9744a"><span data-offset-key="b5feda558af9464aa2bacae6d6b9744a:0">These are quick answers or links for some common tasks.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="f367c70e35684b1a9cfe2ffc9e1c241b"><span data-offset-key="f367c70e35684b1a9cfe2ffc9e1c241b:0">… install </span><span data-offset-key="f367c70e35684b1a9cfe2ffc9e1c241b:1">`pip`</span><span data-offset-key="f367c70e35684b1a9cfe2ffc9e1c241b:2"> in versions of Python prior to Python 3.4?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1e21746332c142118868b79109caa1ae"><span data-offset-key="1e21746332c142118868b79109caa1ae:0">Python only started bundling </span><span data-offset-key="1e21746332c142118868b79109caa1ae:1">`pip`</span><span data-offset-key="1e21746332c142118868b79109caa1ae:2"> with Python 3.4. For earlier versions, </span><span data-offset-key="1e21746332c142118868b79109caa1ae:3">`pip`</span><span data-offset-key="1e21746332c142118868b79109caa1ae:4"> needs to be “bootstrapped” as described in the Python Packaging User Guide.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="918c3a0d50fb4ab2ab749af0eb650c09"><span data-offset-key="918c3a0d50fb4ab2ab749af0eb650c09:0">See also </span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="93cb7d0a4a704e65b3c75200c5d57114"><span data-offset-key="93cb7d0a4a704e65b3c75200c5d57114:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://packaging.python.org/installing/#requirements-for-installing-packages" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="4078c098dd644e398cb0b2b726d8ceb6"><span data-offset-key="4078c098dd644e398cb0b2b726d8ceb6:0">Python Packaging User Guide: Requirements for Installing Packages</span></span></a><span data-key="6b1e247fb6d74db78afa98484760a65b"><span data-offset-key="6b1e247fb6d74db78afa98484760a65b:0"><span data-slate-zero-width="z">​</span></span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="fee16f5cabf04203a7741bddf777574f"><span data-offset-key="fee16f5cabf04203a7741bddf777574f:0">… install packages just for the current user?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6a629d9cc2ca4df8920a4b222754f3e0"><span data-offset-key="6a629d9cc2ca4df8920a4b222754f3e0:0">Passing the </span><span data-offset-key="6a629d9cc2ca4df8920a4b222754f3e0:1">`--user`</span><span data-offset-key="6a629d9cc2ca4df8920a4b222754f3e0:2"> option to </span><span data-offset-key="6a629d9cc2ca4df8920a4b222754f3e0:3">`python -m pip install`</span><span data-offset-key="6a629d9cc2ca4df8920a4b222754f3e0:4"> will install a package just for the current user, rather than for all users of the system.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="2701c3f2dc4b41ffb17aebbfc70f1c39"><span data-offset-key="2701c3f2dc4b41ffb17aebbfc70f1c39:0">… install scientific Python packages?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7ecd8d1bb4b148b5908cdcee1c517244"><span data-offset-key="7ecd8d1bb4b148b5908cdcee1c517244:0">A number of scientific Python packages have complex binary dependencies, and aren’t currently easy to install using </span><span data-offset-key="7ecd8d1bb4b148b5908cdcee1c517244:1">`pip`</span><span data-offset-key="7ecd8d1bb4b148b5908cdcee1c517244:2"> directly. At this point in time, it will often be easier for users to install these packages by </span></span><a href="https://packaging.python.org/science/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="33793728a014437bbea88738f01875e6"><span data-offset-key="33793728a014437bbea88738f01875e6:0">other means</span></span></a><span data-key="b094621852354524bbce2fd94bcc02d7"><span data-offset-key="b094621852354524bbce2fd94bcc02d7:0"> rather than attempting to install them with </span><span data-offset-key="b094621852354524bbce2fd94bcc02d7:1">`pip`</span><span data-offset-key="b094621852354524bbce2fd94bcc02d7:2">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="43190adb45e54a158c1f7f3a22e1410e"><span data-offset-key="43190adb45e54a158c1f7f3a22e1410e:0">See also </span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="83b42b64a1d8480f8f6a9172c477be9a"><span data-offset-key="83b42b64a1d8480f8f6a9172c477be9a:0"><span data-slate-zero-width="z">​</span></span></span><a href="https://packaging.python.org/science/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="556af443de30466aaf59667b9e476e8e"><span data-offset-key="556af443de30466aaf59667b9e476e8e:0">Python Packaging User Guide: Installing Scientific Packages</span></span></a><span data-key="9f0a231bd65d40d48170cf709a7ac957"><span data-offset-key="9f0a231bd65d40d48170cf709a7ac957:0"><span data-slate-zero-width="z">​</span></span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="30cc8d0cd1c5434485583ad953dd8bcb"><span data-offset-key="30cc8d0cd1c5434485583ad953dd8bcb:0">… work with multiple versions of Python installed in parallel?</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="8a224479e2a54964810621ae4612594c"><span data-offset-key="8a224479e2a54964810621ae4612594c:0">On Linux, Mac OS X, and other POSIX systems, use the versioned Python commands in combination with the </span><span data-offset-key="8a224479e2a54964810621ae4612594c:1">`-m`</span><span data-offset-key="8a224479e2a54964810621ae4612594c:2"> switch to run the appropriate copy of </span><span data-offset-key="8a224479e2a54964810621ae4612594c:3">`pip`</span><span data-offset-key="8a224479e2a54964810621ae4612594c:4">:</span></span></span>

    python2   -m pip install SomePackage  # default Python 2python2.7 -m pip install SomePackage  # specifically Python 2.7python3   -m pip install SomePackage  # default Python 3python3.4 -m pip install SomePackage  # specifically Python 3.4

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c69b96e394d14cbe96a3fe0fdd8a9614"><span data-offset-key="c69b96e394d14cbe96a3fe0fdd8a9614:0">Appropriately versioned </span><span data-offset-key="c69b96e394d14cbe96a3fe0fdd8a9614:1">`pip`</span><span data-offset-key="c69b96e394d14cbe96a3fe0fdd8a9614:2"> commands may also be available.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9213674b26b04785bf88bdefb1ab9d0b"><span data-offset-key="9213674b26b04785bf88bdefb1ab9d0b:0">On Windows, use the </span><span data-offset-key="9213674b26b04785bf88bdefb1ab9d0b:1">`py`</span><span data-offset-key="9213674b26b04785bf88bdefb1ab9d0b:2"> Python launcher in combination with the </span><span data-offset-key="9213674b26b04785bf88bdefb1ab9d0b:3">`-m`</span><span data-offset-key="9213674b26b04785bf88bdefb1ab9d0b:4"> switch:</span></span></span>

    py -2   -m pip install SomePackage  # default Python 2py -2.7 -m pip install SomePackage  # specifically Python 2.7py -3   -m pip install SomePackage  # default Python 3py -3.4 -m pip install SomePackage  # specifically Python 3.4

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="240c806816b54fb98aa7601a6029a187"><span data-offset-key="240c806816b54fb98aa7601a6029a187:0">Common installation issues</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="91b63d718f3f41a7886f1a4a04662730"><span data-offset-key="91b63d718f3f41a7886f1a4a04662730:0">Installing into the system Python on Linux</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="fdfe0209e07841c2887eb8954e35a22d"><span data-offset-key="fdfe0209e07841c2887eb8954e35a22d:0">On Linux systems, a Python installation will typically be included as part of the distribution. Installing into this Python installation requires root access to the system, and may interfere with the operation of the system package manager and other components of the system if a component is unexpectedly upgraded using </span><span data-offset-key="fdfe0209e07841c2887eb8954e35a22d:1">`pip`</span><span data-offset-key="fdfe0209e07841c2887eb8954e35a22d:2">.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="051950d9fcf44d87bcbe168a89cbd5b0"><span data-offset-key="051950d9fcf44d87bcbe168a89cbd5b0:0">On such systems, it is often better to use a virtual environment or a per-user installation when installing packages with </span><span data-offset-key="051950d9fcf44d87bcbe168a89cbd5b0:1">`pip`</span><span data-offset-key="051950d9fcf44d87bcbe168a89cbd5b0:2">.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="0eb0617010794515af26d6c2ad97446f"><span data-offset-key="0eb0617010794515af26d6c2ad97446f:0">Pip not installed</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5cd3cb344bb34026bdb134b94bfdeb73"><span data-offset-key="5cd3cb344bb34026bdb134b94bfdeb73:0">It is possible that </span><span data-offset-key="5cd3cb344bb34026bdb134b94bfdeb73:1">`pip`</span><span data-offset-key="5cd3cb344bb34026bdb134b94bfdeb73:2"> does not get installed by default. One potential fix is:</span></span></span>

    python -m ensurepip --default-pip

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="100c9d324cab4af6b62756c0c7c5e685"><span data-offset-key="100c9d324cab4af6b62756c0c7c5e685:0">There are also additional resources for </span></span><a href="https://packaging.python.org/tutorials/installing-packages/#install-pip-setuptools-and-wheel" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="c95b20e1276547ac9efa76c4ba517912"><span data-offset-key="c95b20e1276547ac9efa76c4ba517912:0">installing pip.</span></span></a><span data-key="839c53cbbad044e18f90583188f326cb"><span data-offset-key="839c53cbbad044e18f90583188f326cb:0"><span data-slate-zero-width="z">​</span></span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="587f9aa506cd4ba49b4204a1183b7d26"><span data-offset-key="587f9aa506cd4ba49b4204a1183b7d26:0">Installing binary extensions</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="dfa2c69a56b5400290d091e1eac604ca"><span data-offset-key="dfa2c69a56b5400290d091e1eac604ca:0">Python has typically relied heavily on source based distribution, with end users being expected to compile extension modules from source as part of the installation process.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="80b71b772c714cb88bd80830e217abf1"><span data-offset-key="80b71b772c714cb88bd80830e217abf1:0">With the introduction of support for the binary </span><span data-offset-key="80b71b772c714cb88bd80830e217abf1:1">`wheel`</span><span data-offset-key="80b71b772c714cb88bd80830e217abf1:2"> format, and the ability to publish wheels for at least Windows and Mac OS X through the Python Packaging Index, this problem is expected to diminish over time, as users are more regularly able to install pre-built extensions rather than needing to build them themselves.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="989538f8014340f7bc0621c5094203e3"><span data-offset-key="989538f8014340f7bc0621c5094203e3:0">Some of the solutions for installing </span></span><a href="https://packaging.python.org/science/" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="3b118b6ef5d44e35b7ab6be3b9ff4602"><span data-offset-key="3b118b6ef5d44e35b7ab6be3b9ff4602:0">scientific software</span></span></a><span data-key="789d18aa0c714bb8b521f4902767820c"><span data-offset-key="789d18aa0c714bb8b521f4902767820c:0"> that are not yet available as pre-built </span><span data-offset-key="789d18aa0c714bb8b521f4902767820c:1">`wheel`</span><span data-offset-key="789d18aa0c714bb8b521f4902767820c:2"> files may also help with obtaining other binary extensions without needing to build them locally.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f93051ab470c4799a97d79d80da46dbb"><span data-offset-key="f93051ab470c4799a97d79d80da46dbb:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4520c566e6b9487681e229e705501339"><span data-offset-key="4520c566e6b9487681e229e705501339:0">------------------------------------------------------------------------------------------------------------------------</span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="b44b21712eca41f3b2a8dc86c7743fb0"><span data-offset-key="b44b21712eca41f3b2a8dc86c7743fb0:0">Alternate Python Setup:</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="1b6a6e9fd067415c9f53a71475c78961"><span data-offset-key="1b6a6e9fd067415c9f53a71475c78961:0">------------------------------------------------------------------------------------------------------------------------</span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="303db6aca108449994d8793ee15695dd"><span data-offset-key="303db6aca108449994d8793ee15695dd:0"><span data-slate-zero-width="n">​</span></span></span></span>

<span class="text-4505230f--HeadingH700-04e1a2a3--textContentFamily-49a318e1"><span data-key="124d8bf4102040df8831d537bd1a8110"><span data-offset-key="124d8bf4102040df8831d537bd1a8110:0">Python Installation Instructions</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="cb5eb54972b74abfb213e42fc7bb7b31"><span data-offset-key="cb5eb54972b74abfb213e42fc7bb7b31:0">Python is the second programming language we will use in this course.</span></span></span>

> <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="f63dceff5e28497cad18a95eb3b0a3e6"><span data-offset-key="f63dceff5e28497cad18a95eb3b0a3e6:0">Note: We do not install the python using the installer from the python.org website in this course. If you have one installed you should uninstall it before installing this version of python.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="895ea11f390848cc86babd7ee7900f27"><span data-offset-key="895ea11f390848cc86babd7ee7900f27:0">Currently the curriculum for this course is compatible with Python 3.9.</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="e1fffeaf34044596848f5cc0009711c1"><span data-offset-key="e1fffeaf34044596848f5cc0009711c1:0">Installing pyenv</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="674db04408154568b3fadb89dbf76c3f"><span data-offset-key="674db04408154568b3fadb89dbf76c3f:0">The first thing we need is to install the Python version manager (</span></span><a href="https://github.com/pyenv/pyenv" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="8d250fa7c83a4fbb83937ea609ea7e7a"><span data-offset-key="8d250fa7c83a4fbb83937ea609ea7e7a:0">pyenv</span></span></a><span data-key="780dcac622c64da4a8c8454ec9bab0fe"><span data-offset-key="780dcac622c64da4a8c8454ec9bab0fe:0">). This is similar to the </span><span data-offset-key="780dcac622c64da4a8c8454ec9bab0fe:1">`nvm`</span><span data-offset-key="780dcac622c64da4a8c8454ec9bab0fe:2"> tool we used to install Node.JS, except it controls what versions of python we use on our system.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="50fb7e6b1a60423c8e7bbf99e2840762"><span data-offset-key="50fb7e6b1a60423c8e7bbf99e2840762:0">To install pyenv we use the </span></span><a href="https://github.com/pyenv/pyenv-installer" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="e0bc7152edf74b23b80114113d427fc5"><span data-offset-key="e0bc7152edf74b23b80114113d427fc5:0">pyenv-installer</span></span></a><span data-key="1980fca050eb4c428f9cf8c2bf850449"><span data-offset-key="1980fca050eb4c428f9cf8c2bf850449:0"><span data-slate-zero-width="z">​</span></span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4eacaf1278e143c0bab024be5eea3964"><span data-offset-key="4eacaf1278e143c0bab024be5eea3964:0">From the installation instructions on the </span></span><a href="https://github.com/pyenv/pyenv-installer" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="05e8c04098194425bf85d6064a581290"><span data-offset-key="05e8c04098194425bf85d6064a581290:0">pyenv-installer</span></span></a><span data-key="a9b8ed60eb0e4a5d94a43f6e6b6fa9dc"><span data-offset-key="a9b8ed60eb0e4a5d94a43f6e6b6fa9dc:0"> website, it says we run the following command:</span></span></span>

    curl https://pyenv.run | bash

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="6913bc238f5849d68bbeb7a006d03518"><span data-offset-key="6913bc238f5849d68bbeb7a006d03518:0">Unlike </span><span data-offset-key="6913bc238f5849d68bbeb7a006d03518:1">`nvm`</span><span data-offset-key="6913bc238f5849d68bbeb7a006d03518:2">, </span><span data-offset-key="6913bc238f5849d68bbeb7a006d03518:3">`pyenv`</span><span data-offset-key="6913bc238f5849d68bbeb7a006d03518:4"> does not automatically add it's startup lines to your shell startup file.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7b31c0f944f841deaa9fc673cc656d12"><span data-offset-key="7b31c0f944f841deaa9fc673cc656d12:0">The files that you have to change will depend on which shell you are running (you can check which shell you have by running </span><span data-offset-key="7b31c0f944f841deaa9fc673cc656d12:1">`echo $SHELL`</span><span data-offset-key="7b31c0f944f841deaa9fc673cc656d12:2">). Follow the instructions to update the startup files associated with the shell that you are running.</span></span></span>

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="b22a69fba41749da965a07fa58e6e34b"><span data-offset-key="b22a69fba41749da965a07fa58e6e34b:0">If your shell is </span><span data-offset-key="b22a69fba41749da965a07fa58e6e34b:1">`zsh`</span></span></span>

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d45242b1730a48d183549f35f4836c23"><span data-offset-key="d45242b1730a48d183549f35f4836c23:0">Open up your </span><span data-offset-key="d45242b1730a48d183549f35f4836c23:1">`.profile`</span><span data-offset-key="d45242b1730a48d183549f35f4836c23:2"> file with the following command.</span></span></span>

    code ~/.profile

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2991d5e2a68f49d48ce486c51514cb14"><span data-offset-key="2991d5e2a68f49d48ce486c51514cb14:0">Add the following lines to your </span><span data-offset-key="2991d5e2a68f49d48ce486c51514cb14:1">`.profile`</span><span data-offset-key="2991d5e2a68f49d48ce486c51514cb14:2">.</span></span></span>

    export PYENV_ROOT="$HOME/.pyenv"export PATH="$PYENV_ROOT/bin:$PATH"eval "$(pyenv init --path)"

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c175d0ade2994955819eb2fda7970315"><span data-offset-key="c175d0ade2994955819eb2fda7970315:0">Open up your </span><span data-offset-key="c175d0ade2994955819eb2fda7970315:1">`.zprofile`</span><span data-offset-key="c175d0ade2994955819eb2fda7970315:2"> file with the following command.</span></span></span>

    code ~/.zprofile

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="e4a43a289b4e45fd956acb4a55e35f00"><span data-offset-key="e4a43a289b4e45fd956acb4a55e35f00:0">Add the following lines to your </span><span data-offset-key="e4a43a289b4e45fd956acb4a55e35f00:1">`.zprofile`</span><span data-offset-key="e4a43a289b4e45fd956acb4a55e35f00:2">. (Yes, these are the same as above.)</span></span></span>

    export PYENV_ROOT="$HOME/.pyenv"export PATH="$PYENV_ROOT/bin:$PATH"eval "$(pyenv init --path)"

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="46f6b1c307df41ca9f566b9e60d4a167"><span data-offset-key="46f6b1c307df41ca9f566b9e60d4a167:0">Open your </span><span data-offset-key="46f6b1c307df41ca9f566b9e60d4a167:1">`.zshrc`</span><span data-offset-key="46f6b1c307df41ca9f566b9e60d4a167:2"> with the following command</span></span></span>

    code ~/.zshrc

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c0d63ca2c10c49e18ed39dd82c65c264"><span data-offset-key="c0d63ca2c10c49e18ed39dd82c65c264:0">Add the following line.</span></span></span>

    eval "$(pyenv init -)"

### 

<span class="text-4505230f--HeadingH400-686c0942--textContentFamily-49a318e1"><span data-key="d008f8343c5946cba1b569e367e00f13"><span data-offset-key="d008f8343c5946cba1b569e367e00f13:0">If your shell is </span><span data-offset-key="d008f8343c5946cba1b569e367e00f13:1">`bash`</span></span></span>

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="4347b00f821e42109e1dfd82da6fd116"><span data-offset-key="4347b00f821e42109e1dfd82da6fd116:0">Open up your </span><span data-offset-key="4347b00f821e42109e1dfd82da6fd116:1">`.profile`</span><span data-offset-key="4347b00f821e42109e1dfd82da6fd116:2"> file with the following command.</span></span></span>

    code ~/.profile

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9b46ec6f9d6a48d6993f09697cc4061c"><span data-offset-key="9b46ec6f9d6a48d6993f09697cc4061c:0">Add the following lines.</span></span></span>

    export PYENV_ROOT="$HOME/.pyenv"export PATH="$PYENV_ROOT/bin:$PATH"eval "$(pyenv init --path)"

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="be3732188844430fa793327f976bfbb2"><span data-offset-key="be3732188844430fa793327f976bfbb2:0">Check if you have a </span><span data-offset-key="be3732188844430fa793327f976bfbb2:1">`.bash_profile`</span><span data-offset-key="be3732188844430fa793327f976bfbb2:2">. Run the following at the command line if you don't know.</span></span></span>

    if [ -f ~/.bash_profile ]; then echo "bash_profile exists"; else echo "bash_profile does not exist"; fi

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="daa9e298d859496a8ba84841ed33cc07"><span data-offset-key="daa9e298d859496a8ba84841ed33cc07:0">If you don't have a </span><span data-offset-key="daa9e298d859496a8ba84841ed33cc07:1">`.bash_profile`</span><span data-offset-key="daa9e298d859496a8ba84841ed33cc07:2">, you can skip the rest of this step. If you do, open up your </span><span data-offset-key="daa9e298d859496a8ba84841ed33cc07:3">`.bash_profile`</span><span data-offset-key="daa9e298d859496a8ba84841ed33cc07:4"> file with the following command.</span></span></span>

    code ~/.bash_profile

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="100da60d566144fb8720d365b78eb87d"><span data-offset-key="100da60d566144fb8720d365b78eb87d:0">Add the following lines to your </span><span data-offset-key="100da60d566144fb8720d365b78eb87d:1">`.bash_profile`</span><span data-offset-key="100da60d566144fb8720d365b78eb87d:2">. (Yes, these are the same as above.)</span></span></span>

    export PYENV_ROOT="$HOME/.pyenv"export PATH="$PYENV_ROOT/bin:$PATH"eval "$(pyenv init --path)"

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="ba4f9d582c3f48fd8fc888b72ae4aa91"><span data-offset-key="ba4f9d582c3f48fd8fc888b72ae4aa91:0">Open your </span><span data-offset-key="ba4f9d582c3f48fd8fc888b72ae4aa91:1">`.bashrc`</span><span data-offset-key="ba4f9d582c3f48fd8fc888b72ae4aa91:2"> with the following command</span></span></span>

    code ~/.bashrc

1.  <span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="02832ebf26c744ba85fcb7f0a5e76192"><span data-offset-key="02832ebf26c744ba85fcb7f0a5e76192:0">Add the following line.</span></span></span>

    eval "$(pyenv init -)"

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="758c2f95b69e48f5946c5481f9bab877"><span data-offset-key="758c2f95b69e48f5946c5481f9bab877:0">To get your startup file to execute, restart your terminal.</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="22bdb8d2aaa34d73a32144209a1518f0"><span data-offset-key="22bdb8d2aaa34d73a32144209a1518f0:0">Installing dependencies on Windows and Ubuntu</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="52b3faf9fa69452099a2440863f5e93d"><span data-offset-key="52b3faf9fa69452099a2440863f5e93d:0">If you use macOS you can skip this step.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="2dfa2509a79c4fed8a0853c3d08878c0"><span data-offset-key="2dfa2509a79c4fed8a0853c3d08878c0:0">For Windows and Ubuntu users you will need to install some extra dependencies for python. (See here for more information about the prerequisites: </span></span><a href="https://github.com/pyenv/pyenv/wiki/Common-build-problems" class="link-a079aa82--primary-53a25e66--link-faf6c434"><span data-key="0322fe3f1656406d884310a43262324e"><span data-offset-key="0322fe3f1656406d884310a43262324e:0">pyenv Prerequities</span></span></a><span data-key="0045a4239ef1423685245fb5d8b52e1e"><span data-offset-key="0045a4239ef1423685245fb5d8b52e1e:0">)</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="0acf36936fe14b5bb9571ba1f9c32934"><span data-offset-key="0acf36936fe14b5bb9571ba1f9c32934:0">First run this command to update your apt repositories:</span></span></span>

    sudo apt update

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="d161d75109ae439d89c0da01a45c4aca"><span data-offset-key="d161d75109ae439d89c0da01a45c4aca:0">and then run this command to install the packages listed on the pyenv.</span></span></span>

    sudo apt-get install -y build-essential libssl-dev zlib1g-dev libbz2-dev \libreadline-dev libsqlite3-dev wget curl llvm libncurses5-dev libncursesw5-dev \xz-utils tk-dev libffi-dev liblzma-dev python-openssl git

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="87c9697a205c44b896479a1d7ba6a7d8"><span data-offset-key="87c9697a205c44b896479a1d7ba6a7d8:0">Installing python itself</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="31e076990a864841b37c5fc44a05fe6f"><span data-offset-key="31e076990a864841b37c5fc44a05fe6f:0">Now we are ready to install python. We will be installing Python version 3.9.4.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="be76b320688446949661948f5933b591"><span data-offset-key="be76b320688446949661948f5933b591:0">Then run this command to install python (you'll notice pyenv makes us put in the </span><span data-offset-key="be76b320688446949661948f5933b591:1">*exact*</span><span data-offset-key="be76b320688446949661948f5933b591:2"> version instead of being able to just say </span><span data-offset-key="be76b320688446949661948f5933b591:3">`3.9`</span><span data-offset-key="be76b320688446949661948f5933b591:4"> or </span><span data-offset-key="be76b320688446949661948f5933b591:5">`3`</span><span data-offset-key="be76b320688446949661948f5933b591:6">)</span></span></span>

    pyenv install 3.9.4

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="7e2c0d5a10384de592cfb55ac4c55fde"><span data-offset-key="7e2c0d5a10384de592cfb55ac4c55fde:0">After some time this should complete without any errors. It could take a while since you are compiling python from source code.</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="a9ab9ebf1b954986ac22acc5a99a09c4"><span data-offset-key="a9ab9ebf1b954986ac22acc5a99a09c4:0">Once this is finished we also need to tell pyenv this is our default version of python using this command:</span></span></span>

    pyenv global 3.9.4

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="9f788aae2f18441387fd4d177a5621b1"><span data-offset-key="9f788aae2f18441387fd4d177a5621b1:0">Ensure that these changes take effect by closing your terminal and opening a new one. Then, we can verify our python is the correct version by typing</span></span></span>

    python --versionpython3 --version

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="5596f94068ce41cb82b387592feee1dd"><span data-offset-key="5596f94068ce41cb82b387592feee1dd:0">Both of these commands should show 3.9.4</span></span></span>

<span class="text-4505230f--HeadingH600-23f228db--textContentFamily-49a318e1"><span data-key="6f830346b6e7429799645b34bb639e27"><span data-offset-key="6f830346b6e7429799645b34bb639e27:0">Pipenv</span></span></span>

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="32df4bbfa3f14e1e9f1ab35f3c566278"><span data-offset-key="32df4bbfa3f14e1e9f1ab35f3c566278:0">Another piece of software we will use in class is Pipenv. Don't worry about what this is right now, it's just enough to install it.</span></span></span>

    pip install pipenv

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="c581da4968bb42628f436a5da133d13d"><span data-offset-key="c581da4968bb42628f436a5da133d13d:0">Then after you have installed pipenv, add this line to your shell startup file (either your </span><span data-offset-key="c581da4968bb42628f436a5da133d13d:1">`.bashrc`</span><span data-offset-key="c581da4968bb42628f436a5da133d13d:2"> or your </span><span data-offset-key="c581da4968bb42628f436a5da133d13d:3">`.zshrc`</span><span data-offset-key="c581da4968bb42628f436a5da133d13d:4">) somewhere after the </span><span data-offset-key="c581da4968bb42628f436a5da133d13d:5">`eval "$(pyenv init -)"`</span><span data-offset-key="c581da4968bb42628f436a5da133d13d:6">.</span></span></span>

    export PIPENV_VENV_IN_PROJECT=1

<span class="text-4505230f--TextH400-3033861f--textContentFamily-49a318e1"><span data-key="251dec472497485cb24d0ebe02a22094"><span data-offset-key="251dec472497485cb24d0ebe02a22094:0">Congratulations! If you've completed all these steps you are ready to code in Python!</span></span></span>

<a href="../interview-prep/interview-resources/150-practice-problems-and-solutions.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardPrevious-56a5e674"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Previous</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">150 Practice Problems & Solutions</span>

<a href="installing-python-modules.html" class="reset-3c756112--card-6570f064--whiteCard-fff091a4--cardNext-19241c42"></a>

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Next - Installations Setup & Env</span>

<span class="text-4505230f--UIH400-4e41e82a--textContentFamily-49a318e1">Installing Python Modules</span>

<img src="https://avatars.githubusercontent.com/u/66654881?v=4" class="image-67b14f24--avatar-1c1d03ec" />

<span class="text-4505230f--TextH200-a3425406--textContentFamily-49a318e1">Last updated 10 hours ago</span>

<a href="https://github.com/bgoonz/python-gitbook/blob/master/installations-setup-and-env/untitled.md" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageSideMenuItem-22949732"></a>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Edit on GitHub</span>

<span class="text-4505230f--UIH300-2063425d--textUIFamily-5ebd8e40">Export as PDF</span>

<span class="text-4505230f--InfoH100-1e92e1d1--textContentFamily-49a318e1">Contents</span>

<a href="untitled.html#installing-python-modules" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Installing Python Modules</span></span>

<a href="untitled.html#key-terms" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Key terms</span></span>

<a href="untitled.html#basic-usage" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Basic usage</span></span>

<a href="untitled.html#how-do-i" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">How do I …?</span></span>

<a href="untitled.html#common-installation-issues" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Common installation issues</span></span>

<a href="untitled.html#alternate-python-setup" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Alternate Python Setup:</span></span>

<a href="untitled.html#python-installation-instructions" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1">Python Installation Instructions</span></span>

<a href="untitled.html#installing-pyenv" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Installing pyenv</span></span>

<a href="untitled.html#installing-dependencies-on-windows-and-ubuntu" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Installing dependencies on Windows and Ubuntu</span></span>

<a href="untitled.html#installing-python-itself" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Installing python itself</span></span>

<a href="untitled.html#pipenv" class="reset-3c756112--menuItem-aa02f6ec--menuItemLight-757d5235--menuItemInline-173bdf97--pageTocItem-f4427024"></a>

<span class="text-4505230f--UIH300-2063425d--textContentFamily-49a318e1"><span class="text-4505230f--UIH200-50ead35f--textContentFamily-49a318e1--pageTocLinkH2-2294976c">Pipenv</span></span>
